--- a/index.html
+++ b/index.html
@@ -11,7 +11,61 @@
       rel="stylesheet"
     />
 
-    <title>Vite + React + TS</title>
+    <title>
+      Marketing Agentur Linz | WhitePeak Digital Marketing Oberösterreich
+    </title>
+    <meta
+      name="description"
+      content="Ihre Marketing Agentur in Linz ✓ SEO ✓ Content Marketing ✓ Performance Marketing. Nr. 1 Digital Marketing Agentur in Oberösterreich mit nachweisbaren Erfolgen."
+    />
+    <meta
+      name="keywords"
+      content="Marketing Agentur Linz, Marketing Linz, Werbeagentur Linz, Digital Marketing Oberösterreich, SEO Agentur Linz, Online Marketing Linz, Content Marketing Linz, Social Media Marketing Oberösterreich"
+    />
+    <meta property="og:title" content="WhitePeak | Digital Marketing Agentur" />
+    <meta
+      property="og:description"
+      content="Ihre Digital Marketing Agentur für nachhaltiges Wachstum und messbare Erfolge."
+    />
+    <meta property="og:type" content="website" />
+    <link rel="canonical" href="https://whitepeak.at" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "WhitePeak Digital Marketing Agentur",
+        "image": "https://whitepeak.at/logo.png",
+        "@id": "https://whitepeak.at",
+        "url": "https://whitepeak.at",
+        "telephone": "+43-123-456789",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Rainerstraße 42",
+          "addressLocality": "Marchtrenk",
+          "postalCode": "4614",
+          "addressRegion": "Oberösterreich",
+          "addressCountry": "AT"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 48.3064,
+          "longitude": 14.2858
+        },
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "opens": "09:00",
+          "closes": "17:00"
+        },
+        "sameAs": [
+          "https://www.facebook.com/whitepeak",
+          "https://www.instagram.com/whitepeak",
+          "https://www.linkedin.com/company/whitepeak"
+        ],
+        "priceRange": "€€",
+        "description": "Professionelle Marketing Agentur in Linz, Oberösterreich. Spezialisiert auf SEO, Content Marketing und Performance Marketing."
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
